# external_cmake_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
install/lib/pkgconfig/: external.pc
main/: CMakeLists.txt  main.cpp
